Fix spacing in timeInterval element

--- a/src/Components/TripList.module.scss
+++ b/src/Components/TripList.module.scss
@@ -11,7 +11,7 @@
     }*/
 }
 .timeInterval {
-    padding: 2.5rem 0;
+    padding: 2.5rem .5em;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -35,6 +35,7 @@
     .time {
         display: block;
         text-transform: uppercase;
+        white-space: nowrap;
         font-size: 1.1em;
         color: #909090;
         text-shadow: 0px 1px 2px rgb(230, 230, 230);
